<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDo</string>
    <string name="enter_todo_item">Enter TODO item</string>
    <string name="edit_note">Edit note</string>
    <string name="cancel">Cancel</string>
    <string name="add_todo">Add TODO</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_directory">New directory</string>
    <string name="directory_name">Directory name</string>
    <string name="choose_directory">Choose directory</string>
    <string name="add_directory">New directory</string>
    <string name="directory_hint">Directory name</string>
    <string name="main_directory">Main</string>
    <string name="manage_directories">Manage directories</string>
    <string name="directories_management">Directories management</string>
    <string name="edit_directory">Edit directory</string>
    <string name="delete_directory">Delete directory</string>
    <string name="delete_directory_hint">Are you sure you want to delete this directory?</string>
    <string name="notes_count">Notes: %d</string>
    <string name="directory_notes">Notes</string>
    <string name="add_note_hint">Add note</string>
    <string name="add">Add</string>
    <string name="take_photo">Take photo</string>
    <string name="camera_not_found">Could not find camera</string>
    <string name="camera_no_permission">App needs permission to access camera</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO++</string>
    <string name="e_mail">E-mail</string>
    <string name="pass">Password</string>
    <string name="login">Log in</string>
    <string name="no_account_popup">Have account? Register</string>
    <string name="forgot_pass_popup">Forgot password?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="register_action">Register</string>
    <string name="have_account_login_popup">Have account? Log in</string>
    <string name="enter_login_and_password">Enter email and password</string>
    <string name="login_failed">Logging failed:\n</string>
    <string name="password_reset">Reset password</string>
    <string name="enter_email">Enter email</string>
    <string name="send">Send</string>
    <string name="email_can_not_be_empty">Email cannot be empty</string>
    <string name="error">"Error: "</string>
    <string name="decline">Decline</string>
    <string name="reset_password_mail_send">If the user exist, the mail to reset the password is send.</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="registration_complete">Registration complete</string>
    <string name="account_with_that_email_exist">Account with that mail already exist</string>
    <string name="todo_image">Image</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_note_confirmation">Do you want to delete this note?</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="delete_todo">Delete todo</string>
    <string name="edit_todo">Edit todo</string>
    <string name="delete_failed">Deletion failed</string>
    <string name="edit">Edit</string>
    <string name="todo_details">Todo details</string>
    <string name="set_location">Set Location</string>
    <string name="search_localization">Search the localization</string>
</resources>