<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <EditText
        android:id="@+id/inputTodo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_todo_item"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_700"
        android:inputType="text"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/todoImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:background="@drawable/image_background"
        android:contentDescription="@string/todo_image"
        app:layout_constraintTop_toBottomOf="@id/inputTodo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/imageButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/todoImage"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/take_photo"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginEnd="16dp"
            android:tint="@android:color/white"
            app:backgroundTint="@color/purple_500" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deletePictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_photo"
            android:src="@android:drawable/ic_menu_delete"
            android:tint="@android:color/white"
            app:backgroundTint="@color/design_default_color_error" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_location"
        app:layout_constraintTop_toBottomOf="@id/imageButtonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/pdfButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_select_location"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/openPdfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Open PDF" />

        <Button
            android:id="@+id/selectPdfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Wybierz PDF" />
    </LinearLayout>

    <Button
        android:id="@+id/bluetoothSendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Wyślij przez Bluetooth"
        app:layout_constraintTop_toBottomOf="@id/pdfButtonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="88dp"
        android:text="@string/add_todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
